# lwc-module-sdk-c

./: CMakeLists.txt  lwc_module.c  lwc_module.h  main.c
